templateCreation width fixed on mobile

--- a/src/templateCreation/templateCreation.scss
+++ b/src/templateCreation/templateCreation.scss
@@ -22,7 +22,7 @@
   justify-content: space-around;
   align-items: center;
   height: 100%;
-  width: 100%;
+  width: 100vw;
 
   &-title {
     display: flex;
@@ -197,4 +197,3 @@
   }
 
 }
-
